--- a/deployment/buildspec.yml
+++ b/deployment/buildspec.yml
@@ -12,7 +12,7 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - $(aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 651706745547.dkr.ecr.ap-south-1.amazonaws.com)
+      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 651706745547.dkr.ecr.ap-south-1.amazonaws.com
       - echo Setting up environment variables...
       - REPOSITORY_URI=651706745547.dkr.ecr.ap-south-1.amazonaws.com/sample-golang-service
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
