--- a/deployment/buildspec.yml
+++ b/deployment/buildspec.yml
@@ -8,6 +8,12 @@ phases:
       - echo Installing dependencies...
       - apt-get update -y
       - apt-get install -y protobuf-compiler
+      # Install protoc-gen-go
+      - echo Installing protoc-gen-go-grpc...
+      - go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+      - go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+      - export PATH="$PATH:$(go env GOPATH)/bin"
+
 
   pre_build:
     commands:
